# Clearview-AI-Clone

./: README.md  main.py  pyproject.toml
config/: log_config.yml
configs/: config.yml  log_config.yml
examples/vector_database/: config.json  faiss_db.db  index.faiss
logs/: log.jsonl
